# cryptex

./: .codecov.yml  .coverage  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_REVIEW_CHECKLIST.md  SECURITY.md  codecov.yml  llms.txt  mkdocs.yml  package-lock.json  pyproject.toml
.claude/commands/: create-issue.md
.claude/commands/make/: all.md  benchmark.md  build.md  ci.md  clean.md  info.md  make-test.md  release.md  security.md  version.md  watch-tests.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security.yml  security_issue.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  link-check-config.json  lint.yml  main.yml  performance.yml  pre-release.yml  publish.yml  release.yml  tests.yml  update-deps.yml
.llm/: PRD.md
.llm/docs/: FastMCP.md
.zed/: settings.json  tasks.json
config/: codename.toml
docs/: index.md  quickstart.md
docs/examples/: basic-usage.md  index.md
docs/guide/: basic-usage.md  custom-patterns.md  installation.md  zero-config.md
examples/: README.md  basic_usage.py  demo_new_architecture.py  fastapi_example.py  middleware_examples.py  real_world_usage.py
examples/basic_usage/: README.md  basic_usage.py
examples/config/: advanced.toml  simple.toml
examples/fastapi/: 01_simple_hello_world.py  02_advanced_middleware.py  requirements.txt
examples/fastapi_example/: README.md  fastapi_example.py
examples/fastmcp/: 01_simple_hello_world.py  02_advanced_middleware.py  requirements.txt
examples/real_world_usage/: README.md  real_world_usage.py
examples/shared/: utils.py
scripts/: build.py  release.py  validate.py
src/cryptex/: __init__.py  main.py  patterns.py
src/cryptex/config/: __init__.py  loader.py
src/cryptex/core/: __init__.py  api.py  engine.py  exceptions.py  manager.py
src/cryptex/decorators/: __init__.py  cryptex.py  fastapi.py  mcp.py  protect_secrets.py
src/cryptex/fastapi/: __init__.py  middleware.py
src/cryptex/fastmcp/: __init__.py  middleware.py
src/cryptex/integrations/: __init__.py
src/cryptex/patterns/: registry.py
src/cryptex/security/: __init__.py
src/cryptex_ai/: __init__.py
src/cryptex_ai/core/: __init__.py  engine.py  exceptions.py  manager.py
src/cryptex_ai/decorators/: __init__.py  protect_secrets.py
src/cryptex_ai/patterns/: __init__.py  base.py  registry.py
tests/: __init__.py  conftest.py  test_basic.py
tests/fixtures/: __init__.py  secret_samples.py  test_helpers.py
tests/integration/: __init__.py  test_ai_call_interception.py
tests/live/: README.md  comparison_test.py  live_test.py  simple_live_test.py  test_real_ai_integration.py
tests/performance/: __init__.py  test_benchmarks.py
tests/regression/: __init__.py  test_github_issue_fixes.py
tests/security/: __init__.py  test_core_security.py  test_decorator_error_sanitization.py  test_exception_security.py  test_isolation.py  test_secret_leakage_prevention.py  test_security_improvements.py
tests/unit/: __init__.py  test_pattern_registration.py  test_zero_config_decorator.py
tests/unit/core/: __init__.py  test_engine.py
tests/unit/decorators/: __init__.py  test_protect_secrets.py
tests/unit/patterns/: __init__.py  test_registry.py
tests/unit/test_config/: __init__.py
tests/unit/test_core/: test_api.py
tests/unit/test_security/: __init__.py
